triangulation modifer creases #36781

Closed
opened 2013-09-20 10:49:18 +02:00 by Daniel Grauer · 6 comments
Member

%%%--- Operating System, Graphics card ---
os: windows 7 64bit
gpu: nvidia quadro k4000

- Blender version with error, and version that worked ---

error: r60235, official 2.68a

- Short description of error ---

when triangulation of the modifier is shown in edit mdoe when the object has creases then the edges of the triangulation also get marked as creases

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. load blend file
  2. switch to edit mode
  3. disable/enable edit mode flag on the triangulation modifier and see the difference.

%%%

%%%--- Operating System, Graphics card --- os: windows 7 64bit gpu: nvidia quadro k4000 - Blender version with error, and version that worked --- error: r60235, official 2.68a - Short description of error --- when triangulation of the modifier is shown in edit mdoe when the object has creases then the edges of the triangulation also get marked as creases - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. load blend file 2. switch to edit mode 3. disable/enable edit mode flag on the triangulation modifier and see the difference. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%confirmed. note: this is only in the preview, when you apply the modifier you get no creases.
I'm assigning to myself because I'm planning some changes in the modifier and may as well get familiar with it.
But if anyone already has a fix, feel free to commit.%%%

%%%confirmed. note: this is only in the preview, when you apply the modifier you get no creases. I'm assigning to myself because I'm planning some changes in the modifier and may as well get familiar with it. But if anyone already has a fix, feel free to commit.%%%

%%%@dalai-1: issue is not directly related with triangulate modifier, in fact. MEdge has a char to store crease, while BMesh uses a customdata for that.

Drawing code uses bmesh object to detect which edges are creased (see editor/space_view3d/drawobject.c, functions like draw_dm_creases__setDrawOptions & co), however I do not see anywhere cage DM being ported back into bmeditmesh (and I don’t think it should!)…

Did not dig further, but imho issue is here (drawing code should likely use edges from cage DM instead of BMesh edges). Better to ask Campbell or Brecht about that, though, not so familiar with this.%%%

%%%@dalai-1: issue is not directly related with triangulate modifier, in fact. MEdge has a char to store crease, while BMesh uses a customdata for that. Drawing code uses bmesh object to detect which edges are creased (see editor/space_view3d/drawobject.c, functions like draw_dm_creases__setDrawOptions & co), however I do not see anywhere cage DM being ported back into bmeditmesh (and I don’t think it should!)… Did not dig further, but imho issue is here (drawing code should likely use edges from cage DM instead of BMesh edges). Better to ask Campbell or Brecht about that, though, not so familiar with this.%%%

%%%strange, I thought I had unassigned it from me (doing it now). I will look at it tomorrow, but meanwhile if someone wants to tackle it, be my guess ;)%%%

%%%strange, I thought I had unassigned it from me (doing it now). I will look at it tomorrow, but meanwhile if someone wants to tackle it, be my guess ;)%%%

%%%fixed r60353.%%%

%%%fixed r60353.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36781
No description provided.