fix [#36781] triangulation modifer creases new geometry was initializing its original index to 0 (so all edges displayed with the first edges crease value). now initialize to NONE.